RESOLVED FIXED281781
DAR/SAR/PAR aspect ratios not respected for VP9 WebM
https://bugs.webkit.org/show_bug.cgi?id=281781
Summary DAR/SAR/PAR aspect ratios not respected for VP9 WebM
Eric Portis
Reported 2024-10-18 14:24:08 PDT
Here's a 1400x1400 MP4 with a non-square pixel aspect ratio: https://media.phase-eight.com/video/upload/fl_keep_dar,x_0/c_fill,dpr_2.0,du_30,h_700,w_500/v1/p8-catalog/videos/950582882-video.mp4 It displays as expected (5:7). But a WebM with the same dimensions + aspect-ratio, does not (it displays 1:1): https://media.phase-eight.com/video/upload/fl_keep_dar,x_0/c_fill,dpr_2.0,du_30,h_700,w_500/v1/p8-catalog/videos/950582882-video.webm (Firefox and Chrome both display both videos correctly) Here's what ffprobe says about the WebM: ``` % ffprobe 950582882-video.webm ffprobe version 7.0.2 Copyright (c) 2007-2024 the FFmpeg developers built with Apple clang version 15.0.0 (clang-1500.3.9.4) configuration: --prefix=/opt/homebrew/Cellar/ffmpeg/7.0.2_1 --enable-shared --enable-pthreads --enable-version3 --cc=clang --host-cflags= --host-ldflags='-Wl,-ld_classic' --enable-ffplay --enable-gnutls --enable-gpl --enable-libaom --enable-libaribb24 --enable-libbluray --enable-libdav1d --enable-libharfbuzz --enable-libjxl --enable-libmp3lame --enable-libopus --enable-librav1e --enable-librist --enable-librubberband --enable-libsnappy --enable-libsrt --enable-libssh --enable-libsvtav1 --enable-libtesseract --enable-libtheora --enable-libvidstab --enable-libvmaf --enable-libvorbis --enable-libvpx --enable-libwebp --enable-libx264 --enable-libx265 --enable-libxml2 --enable-libxvid --enable-lzma --enable-libfontconfig --enable-libfreetype --enable-frei0r --enable-libass --enable-libopencore-amrnb --enable-libopencore-amrwb --enable-libopenjpeg --enable-libspeex --enable-libsoxr --enable-libzmq --enable-libzimg --disable-libjack --disable-indev=jack --enable-videotoolbox --enable-audiotoolbox --enable-neon libavutil 59. 8.100 / 59. 8.100 libavcodec 61. 3.100 / 61. 3.100 libavformat 61. 1.100 / 61. 1.100 libavdevice 61. 1.100 / 61. 1.100 libavfilter 10. 1.100 / 10. 1.100 libswscale 8. 1.100 / 8. 1.100 libswresample 5. 1.100 / 5. 1.100 libpostproc 58. 1.100 / 58. 1.100 Input #0, matroska,webm, from '950582882-video.webm': Metadata: MAJOR_BRAND : mp42 MINOR_VERSION : 512 COMPATIBLE_BRANDS: mp42iso2avc1mp41 ENCODER : Lavf60.3.100 Duration: 00:00:08.21, start: 0.000000, bitrate: 577 kb/s Stream #0:0: Video: vp9 (Profile 0), yuv420p(tv, bt709, progressive), 1400x1400, SAR 5:7 DAR 5:7, 25 fps, 25 tbr, 1k tbn Metadata: ENCODER : Lavc60.3.100 libvpx-vp9 DURATION : 00:00:08.160000000 Stream #0:1: Audio: vorbis, 44100 Hz, stereo, fltp Metadata: ENCODER : Lavc60.3.100 libvorbis DURATION : 00:00:08.212000000 ~ ```
Attachments
Radar WebKit Bug Importer
Comment 1 2024-10-25 09:51:51 PDT
Jean-Yves Avenard [:jya]
Comment 2 2024-10-26 17:15:41 PDT
Here we have conflicting information: the webm container does specify a 1000x1400 dimension, but the VP9 bytestream gives 1400x1400 for both image and display size And up to know we favoured the VP9 byte stream data.
Jean-Yves Avenard [:jya]
Comment 3 2024-10-26 21:31:03 PDT
EWS
Comment 4 2024-10-28 19:34:33 PDT
Committed 285809@main (f5992b64d864): <https://commits.webkit.org/285809@main> Reviewed commits have been landed. Closing PR #35768 and removing active labels.
EWS
Comment 5 2024-11-22 07:36:09 PST
Committed 283286.528@safari-7620-branch (1265651ee93f): <https://commits.webkit.org/283286.528@safari-7620-branch> Reviewed commits have been landed. Closing PR #2327 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.