DAR/SAR/PAR aspect ratios not respected for VP9 WebM https://bugs.webkit.org/show_bug.cgi?id=281781 rdar://138642717

Reviewed by Eric Carlson.

Display Aspect Ratio set in the webm container or VP9 bytestream were ignored.
Additionally, prefer the container's display size over the vp9's bytestream one.

Added test.

* LayoutTests/media/content/test-vp9-dar.webm: Added.
* LayoutTests/media/media-vp9-dar-webm-expected.txt: Added.
* LayoutTests/media/media-vp9-dar-webm.html: Added.
* Source/WebCore/PAL/pal/cf/CoreMediaSoftLink.cpp:
* Source/WebCore/PAL/pal/cf/CoreMediaSoftLink.h:
* Source/WebCore/platform/graphics/cocoa/CMUtilities.mm:
(WebCore::createFormatDescriptionFromTrackInfo):
* Source/WebCore/platform/graphics/cocoa/SourceBufferParserWebM.cpp:
(WebCore::WebMParser::VideoTrackData::consumeFrameData):
* Source/WebCore/platform/graphics/cocoa/VP9UtilitiesCocoa.h:
* Source/WebCore/platform/graphics/cocoa/VP9UtilitiesCocoa.mm:
(WebCore::createVideoInfoFromVPCodecConfigurationRecord):
(WebCore::createVideoInfoFromVP9HeaderParser):
(WebCore::createVideoInfoFromVP8Header):

Canonical link: https://commits.webkit.org/285809@main